k8s/keyvaults-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyvaults-deployment
  labels:
    app: keyvaults
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keyvaults
  template:
    metadata:
      labels:
        app: keyvaults
    spec:
      containers:
        - name: keyvaults
          image: keyvaults
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: keyvaults-service
spec:
  selector:
    app: keyvaults
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
