k8s/microservices-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: microservices-gateway
  namespace: microservices
spec:
  gatewayClassName: traefik
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: local-ratsnest-uk-production-tls
            namespace: microservices
