k8s/microservice-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keyvaults-http-route
  namespace: microservices
spec:
  parentRefs:
    - name: microservices-gateway
      sectionName: http
      kind: Gateway

  hostnames:
    - localdev.local.ratsnest.uk

  rules:
    # Rule for backend
    - matches:
        - path:
            type: PathPrefix
            value: /api/keyvaults
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: keyvaults-service
          namespace: microservices
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keyvaults-http-route
  namespace: microservices
spec:
  parentRefs:
    - name: microservices-gateway
      sectionName: https
      kind: Gateway

  hostnames:
    - localdev.local.ratsnest.uk

  rules:
    # Rule for backend
    - matches:
        - path:
            type: PathPrefix
            value: /api/keyvaults
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: keyvaults-service
          namespace: microservices
          port: 80
